[gd_scene load_steps=6 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/pickups/coinsprites/coin.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/pickups/basic_bullets.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.831373, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.34902, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_bottom = 1.0
margin_right = 1024.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinLable" type="Label" parent="."]
anchor_left = 0.133
anchor_right = 0.25
anchor_bottom = 0.067
margin_left = -0.192001
margin_bottom = -0.200001
text = "Coins: 0"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="."]
anchor_left = 0.133
anchor_top = 0.093
anchor_right = 0.25
anchor_bottom = 0.16
margin_left = -0.192001
margin_top = 0.199999
margin_bottom = -6.79493e-06
text = "Ammo: 7"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.289
anchor_top = 0.08
anchor_right = 0.711
anchor_bottom = 0.103
margin_left = 0.0639954
margin_top = -3.39746e-06
margin_right = -0.0640259
margin_bottom = 0.199995
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.25
anchor_top = 0.08
anchor_right = 0.289
anchor_bottom = 0.103
margin_top = -3.39746e-06
margin_right = 0.0639954
margin_bottom = 0.199995
text = "HP:"

[node name="CoinSprite" type="TextureRect" parent="."]
anchor_left = 0.109
anchor_right = 0.148
anchor_bottom = 0.067
margin_left = 0.383995
margin_right = 0.447998
margin_bottom = -0.200001
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoSprite" type="TextureRect" parent="."]
anchor_left = 0.109
anchor_top = 0.093
anchor_right = 0.148
anchor_bottom = 0.16
margin_left = 0.383995
margin_top = 0.199999
margin_right = 0.447998
margin_bottom = -6.79493e-06
texture = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
